--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           go-version: 1.15
 
       - name: Get Dependencies
-        run: go get
+        run: go mod download
 
       - name: Build
         run: |
