--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,4 +57,4 @@ jobs:
         run: npm install -g serverless
       
       - name: Deploy
-        run: serverless deploy --stage dev --opt SpotifyClientID "${{ secrets.SPOTIFY_CLIENT_ID }}" --opt SpotifySecretID "${{ secrets.SPOTIFY_SECRET_ID }}"
+        run: serverless deploy --stage dev --SpotifyClientID "${{ secrets.SPOTIFY_CLIENT_ID }}" --SpotifySecretID "${{ secrets.SPOTIFY_SECRET_ID }}"
