--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     env:
       GOOS: linux
@@ -43,6 +44,7 @@ jobs:
           path: bin/*
 
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -51,6 +53,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: go-binaries
+          path: bin
 
       - name: Setup Node
         uses: actions/setup-node@v1
