--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  AWS_DEFAULT_REGION: ap-southeast-2
+
 jobs:
   build:
     name: Build
@@ -64,4 +67,7 @@ jobs:
         run: npm install -g serverless
       
       - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: serverless deploy --stage dev --SpotifyClientID "${{ secrets.SPOTIFY_CLIENT_ID }}" --SpotifySecretID "${{ secrets.SPOTIFY_SECRET_ID }}"
