--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,11 @@ jobs:
       - name: Build
         working-directory: source/
         run: |
+          go build -ldflags="-s -w" -o bin/signup                rest/account/signup/main.go
+          go build -ldflags="-s -w" -o bin/signin                rest/account/signin/main.go
           go build -ldflags="-s -w" -o bin/oauthAuthenticate     rest/oauth/authenticate/main.go
           go build -ldflags="-s -w" -o bin/oauthProviderRedirect rest/oauth/callback/main.go
 
-          go build -ldflags="-s -w" -o bin/createUser     rest/user/createUser/main.go
           go build -ldflags="-s -w" -o bin/getUser        rest/user/getUser/main.go
           go build -ldflags="-s -w" -o bin/updateUser     rest/user/updateUser/main.go
 
