--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
           go build -ldflags="-s -w" -o bin/chuneMachine   lambda/chune-machine/main.go
           go build -ldflags="-s -w" -o bin/beanCounter    lambda/bean-counter/main.go
           go build -ldflags="-s -w" -o bin/scoreTaker     lambda/score-taker/main.go
+          go build -ldflags="-s -w" -o bin/authorizer     lambda/authorizer/main.go
 
       - name: Upload binaries
         uses: actions/upload-artifact@v2
@@ -86,4 +87,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: serverless deploy --stage dev --SpotifyClientID "${{ secrets.SPOTIFY_CLIENT_ID }}" --SpotifySecretID "${{ secrets.SPOTIFY_SECRET_ID }}"
+        run: serverless deploy --verbose --stage dev --SpotifyClientID "${{ secrets.SPOTIFY_CLIENT_ID }}" --SpotifySecretID "${{ secrets.SPOTIFY_SECRET_ID }}"
